[gd_scene load_steps=3 format=3 uid="uid://bqx8y2n3m4k5l"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_script"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32
font_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 150.0
text = "3D鬼追人游戏"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0

[node name="CreateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "创建服务器"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "加入服务器"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
text = "准备就绪"
horizontal_alignment = 1 